syntax = "proto3";
package api.users;

option csharp_namespace = "Api.Users";

service UsersGrpc {
  rpc GetUsers (GetUserRequest) returns (GetUserReply);
  rpc AddUser (AddUserRequest) returns (AddUserReply);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message GetUserRequest {

}

message AddUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message DeleteUserRequest {
  int32 id = 1;
}

message GetUserReply {
  repeated User users = 1;
}

message AddUserReply {
  repeated User users = 1;
}

message UpdateUserReply {
  repeated User users = 1;
}

message DeleteUserReply {
  // 작업의 성공 여부를 나타내는 상태 코드
  //int32 status = 1;
  // 상태 메시지, 예를 들어 "Success" 또는 "Failure: User not found"
  //string message = 2;
  repeated User users = 1;
}
